--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="DOM.js"></script>
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Pacifico&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="index.js"></script>
+    <title>IoT-Spot</title>
 </head>
 <body>
-
+    <div id="nav"></div>
+    <div>
+      <h1 class="flex heading">IoT-Spot</h1>
+    </div>
 </body>
 </html>
