Styling Of Front Page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <title>IoT-Spot</title>
 </head>
 <body>
-    <div id="nav"></div>
-    <div>
-      <h1 class="flex heading">IoT-Spot</h1>
+    <div id="nav" class="flex">
+      <li>HOME</li>
+      <li>ABOUT</li>
+      <li>CONTACT</li>
+    </div>
+    <div class="flex front">
+    <div>  <h1 class="heading">IoT-Spot</h1><a class="btn btn-secondary" href="/contact/">Get Started</a> </div>
+      <img src="main-pic.png" alt=" ">
     </div>
 </body>
 </html>
