--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Pacifico&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/f9fe2a0251.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
     <title>IoT-Spot</title>
 </head>
 <body>
-    <div id="nav" class="flex">
+    <div  class="navbar flex">
+      <ul class="flex">
       <li>HOME</li>
       <li>ABOUT</li>
       <li>CONTACT</li>
+      <li><i class="fas fa-search"></i></li>
+      <li><i class="far fa-user-circle"></i></li>
+      </ul>
     </div>
     <div class="flex front">
     <div>  <h1 class="heading">IoT-Spot</h1><a class="btn btn-secondary" href="/contact/">Get Started</a> </div>
