Added files in a folder IoT-Spot Website

--- a/IoT-Spot Website/index.html
+++ b/IoT-Spot Website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Pacifico&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f9fe2a0251.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
     <title>IoT-Spot</title>
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div class="flex front">
-    <div>  <h1 class="heading">IoT-Spot</h1><a class="btn btn-secondary" href="/contact/">Get Started</a> </div>
+          <div>  <h1 class="heading">IoT-Spot</h1><a class="btn btn-secondary" href="/contact/">Get Started</a> </div>
       <img src="main-pic.png" alt=" ">
     </div>
 </body>
