--- a/IoT-Spot Website/index.html
+++ b/IoT-Spot Website/index.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Pacifico&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f9fe2a0251.js" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
     <title>IoT-Spot</title>
 </head>
 <body>
@@ -24,5 +23,15 @@
           <div>  <h1 class="heading">IoT-Spot</h1><a class="btn btn-secondary" href="/contact/">Get Started</a> </div>
       <img src="main-pic.png" alt=" ">
     </div>
+    <h1 id="Reviewer">Reviewer's section</h1>
+    <div id="main">
+      <img id="image" src="person1.jpg" alt="">
+      <h3 id="Name">Harley Spencer</h3>
+      <h4 id="designation">UI/UX Designer</h4>
+      <p id="content">A hardworking and dedicated UI/UX Designer. I believe in creating a healthy environment which can help each one of us to grow.</p>
+      <button id="prev">Prev</button>
+      <button id="next">Next</button>
+  </div>
 </body>
+    <script src="index.js"></script>
 </html>
