Added featured section

--- a/IoT-Spot Website/index.html
+++ b/IoT-Spot Website/index.html
@@ -37,19 +37,43 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-    <div  class="navbar flex">
-      <ul class="flex">
-      <li>HOME</li>
-      <li>ABOUT</li>
-      <li>CONTACT</li>
-      <li><i class="fas fa-search"></i></li>
-      <li><i class="far fa-user-circle"></i></li>
-      </ul>
+<div class="solutions" >
+  <h1>Our Featured Solutions</h1>
+  <div class="container flex"> 
+
+    <div class="card">
+    <div class="box ">
+     <div class="content">
+         <h2  style="overflow-y:hidden" >01</h2>
+         <h3 style="overflow-y:hidden">Card One</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non voluptates sit veniam sunt iure quibusdam culpa fugiat, consequatur facere dolor, recusandae distinctio quisquam. Tenetur quas consequatur tempore sapiente provident sint nemo voluptatum asperiores voluptate molestias?</p>
+         <a href="#">Read More</a>
+     </div>
     </div>
-    <div class="flex front">
-      <div>  <h1 class="heading">IoT-Spot</h1><a class="btn btn-secondary" href="/contact/">Get Started</a> </div>
-  <img src="main-pic.png" alt=" ">
+ </div>
+    <div class="card">
+    <div class="box ">
+     <div class="content">
+         <h2 style="overflow-y:hidden">02</h2>
+         <h3 style="overflow-y:hidden">Card Two</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non voluptates sit veniam sunt iure quibusdam culpa fugiat, consequatur facere dolor, recusandae distinctio quisquam. Tenetur quas consequatur tempore sapiente provident sint nemo voluptatum asperiores voluptate molestias?</p>
+         <a href="#">Read More</a>
+     </div>
+    </div>
+ </div>
+ <div class="card">
+  <div class="box ">
+   <div class="content">
+       <h2 style="overflow-y:hidden">03</h2>
+       <h3 style="overflow-y:hidden">Card Three</h3>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non voluptates sit veniam sunt iure quibusdam culpa fugiat, consequatur facere dolor, recusandae distinctio quisquam. Tenetur quas consequatur tempore sapiente provident sint nemo voluptatum asperiores voluptate molestias?</p>
+       <a href="#">Read More</a>
+   </div>
+  </div>
 </div>
+ </div>
+</div>
+
     <h1 id="Reviewer">Reviewer's section</h1>
     <div id="main">
       <img id="image" src="person1.jpg" alt="">
