Dwoc Project Completed

--- a/IoT-Spot Website/index.html
+++ b/IoT-Spot Website/index.html
@@ -96,7 +96,7 @@
                 <li class="nav-link"><a href="#">Home</a></li>
                 <li class="nav-link"><a href="#about">About</a></li>
                 <li class="nav-link"><a href="#portfolio">Projects</a></li>
-                <li class="nav-link"><a target="_blank" href="https://www.medium.com/@prernasharma">Blog</a></li>
+                <li class="nav-link"><a target="_blank" href="assets/blog.html">Blog</a></li>
             </ul>
             <div id="nav-btn" target="_blank" rel="noopener" onclick="window.open('mailto:sharmaprerna0052@gmail.com');">
                 <p>Let's Connect</p>
@@ -190,6 +190,35 @@
     </section>
 </div>
     <!-- ============= About Section Ends =============== -->
+    <!-- ============= Inclusion Section  =============== -->
+<section style="margin:15% 0 20% 0;">
+    <h2 style="text-align:center;">Inclusion</h2>
+    <p style="text-align:center;">Here, are the scripts that are included in our project</p>
+    <div class="row">
+      <div class="column">
+        <h3>8051</h3>
+        <h3>ARM</h3>
+        <h3>Adafruit</h3>
+        <h3>Arduino</h3>
+        <h3>Atmel</h3>
+        <h3>Beagle</h3>
+        
+      </div>
+      <div class="column">
+        <h3>ESP32</h3>
+        <h3>ESP8266</h3>
+        <h3>Node MCU</h3>
+        <h3>PIC</h3>
+        <h3>Raspberry Pi</h3>
+        <h3>Real-Time Scripts</h3>
+      </div>
+    </div>
+  </section>
+
+
+
+  
+    <!-- ============= Inclusion Section Ends =============== -->
   <!--**********offer section*****-->
 <section class="serviceoffers" id="servicediv">
     <div class="container-headings text-center">
@@ -406,12 +435,12 @@
         <div class="col-sm-12">
           <div class="content">
               <br><br>
-            <h3>SUBSCRIBE US</h3>
+            <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
             <form id="newsletterForm">
               <div class="input-group flex-column">
-                	<input type="email" style="height:3.8rem; width:100%;"class="form-control" id="email" placeholder="Enter your email"><br>
+                	<input  type="email" style="height:3.8rem; width:100%;"class="form-control" id="email" placeholder="Enter your email"><br>
                 	<span class="input-group-btn">
-                  	<button class="btn subscribe" type="submit"  >Subscribe Now</button>
+                  	<button class="btn subscribe" style="font-size:13px; font-weight:600;" type="submit"  >Subscribe Now</button>
                 	</span>
               </div>
             </form>
@@ -432,7 +461,7 @@
 
         <div class="footer-icons">
             <a href="https://twitter.com/PrernaS16585319" target="_blank" rel="noopener" alt="twitter">
-                <i class="fa fa-twitter  footer-i"></i>
+                <i style="margin-top:6px;" class="fa fa-twitter  footer-i"></i>
             </a>
 
             <a href="https://www.linkedin.com/in/prerna-sharma-625b56214/" target="_blank" rel="noopener" alt="linkedin">
