--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <li class="nav-link"><a href="#portfolio">Projects</a></li>
                 <li class="nav-link"><a target="_blank" href="assets/blog.html">Blog</a></li>
             </ul>
-            <div id="nav-btn" target="_blank" rel="noopener" onclick="window.open('mailto:sharmaprerna0052@gmail.com');">
+            <div id="nav-btn" target="_blank" rel="noopener" onclick="window.open('mailto:kadariprathima4@gmail.com');">
                 <p>Let's Connect</p>
             </div>
         </div>
@@ -123,12 +123,10 @@
     </div>
 
     <div class="social add-on">
-        <a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/IoT-Spot%20Website" target="_blank" rel="noopener" aria-label="Github"
+        <a href="https://github.com/prathimacode-hub/IoT-Spot" target="_blank" rel="noopener" aria-label="Github"
             data-balloon-pos="right"><i class="fa fa-github social-i"></i></a>
-        <a href="https://www.linkedin.com/in/prerna-sharma-625b56214/" target="_blank" rel="noopener" aria-label="Linkedin"
+        <a href="https://www.linkedin.com/in/prathima-kadari/" target="_blank" rel="noopener" aria-label="Linkedin"
             data-balloon-pos="right"><i class="fa fa-linkedin social-i"></i></a>
-        <a href="https://www.medium.com/@prernasharma" target="_blank" rel="noopener" aria-label="Medium"
-            data-balloon-pos="right"><i class="fa fa-medium social-i"></i></a>
 
         <div class="social-line"></div>
     </div>
@@ -173,7 +171,7 @@
     <section class="section about" id="about">
 
         <div class="about-img">
-            <img src="assets/images/hero.png" alt="Prerna-Sharma-">
+            <img src="assets/images/hero.png" alt="Prathima-Kadari-">
         </div>
 
         <div class="about-content">
@@ -278,7 +276,7 @@
                 <!--- <div class="col-lg-2 col-2 service-icons"><i class=" fas fa-phone"></div> -->
                     <div class="col-lg-10 col-10">
                       <h3 style="margin-left:10vw">Support 24/7</h3>
-                      <p>Here, You will get 24/7 customer support . Beacause we valued our each and every customer .</p>
+                      <p>Here, You will get 24/7 customer support. Beacause we valued our each and every customer.</p>
                     </div>
                     </div>
           </div>
@@ -389,12 +387,12 @@
 
             <div class="contact-details">
 
-                <div class="contact-container mail-id" onclick="window.open('mailto:sharmaprerna0052@gmail.com');">
+                <div class="contact-container mail-id" onclick="window.open('mailto:kadariprathima4@gmail.com');">
                     <div class="contact-icon">
                         <i class="fa fa-envelope"></i>
                     </div>
                     <div class="contact-info">
-                        <a href="mailto:sharmaprerna0052@gmail.com" class="contact-data">sharmaprerna0052@gmail.com</a>
+                        <a href="mailto:kadariprathima4@gmail.com" class="contact-data">kadariprathima4@gmail.com</a>
                     </div>
                 </div>
 
@@ -402,22 +400,18 @@
                     <h3 class="s-head">Contact</h3>
 
                     <div class="social-media-pack">
-                        <a id="twitter" href="https://twitter.com/PrernaS16585319" target="_blank" rel="noopener"
+                        <a id="twitter" href="https://twitter.com/prathimak88" target="_blank" rel="noopener"
                             alt="twitter">
                             <i class="fa fa-twitter  contact-social"></i>
                         </a>
-                        <a id="linkedin" href="https://www.linkedin.com/in/prerna-sharma-625b56214/" target="_blank" rel="noopener"
+                        <a id="linkedin" href="https://www.linkedin.com/in/prathima-kadari" target="_blank" rel="noopener"
                             alt="linkedin">
                             <i class="fa fa-linkedin contact-social"></i>
                         </a>
-                        <a id="github" href="https://github.com/Prerna-0202" target="_blank" rel="noopener"
+                        <a id="github" href="https://github.com/prathimacode-hub" target="_blank" rel="noopener"
                             alt="github">
                             <i class="fa fa-github contact-social"></i>
                         </a>
-                        <a id="instagram" href="https://www.instagram.com/prernaa._.sharmaa/" target="_blank" rel="noopener"
-                        alt="instagram">
-                        <i class="fa fa-instagram contact-social"></i>
-                    </a>
                     </div>
                 </div>
             </div>
@@ -460,17 +454,13 @@
 
 
         <div class="footer-icons">
-            <a href="https://twitter.com/PrernaS16585319" target="_blank" rel="noopener" alt="twitter">
+            <a href="https://twitter.com/prathimak88" target="_blank" rel="noopener" alt="twitter">
                 <i style="margin-top:6px;" class="fa fa-twitter  footer-i"></i>
             </a>
-
-            <a href="https://www.linkedin.com/in/prerna-sharma-625b56214/" target="_blank" rel="noopener" alt="linkedin">
+            <a href="https://www.linkedin.com/in/prathima-kadari/" target="_blank" rel="noopener" alt="linkedin">
                 <i class="fa fa-linkedin footer-i"></i>
             </a>
-            <a href="https://www.instagram.com/prernaa._.sharmaa/" target="_blank" rel="noopener" alt="instagram">
-                <i class="fa fa-instagram footer-i"></i>
-            </a>
-            <a href="https://github.com/Prerna-0202" target="_blank" rel="noopener" alt="github">
+            <a href="https://github.com/prathimacode-hub" target="_blank" rel="noopener" alt="github">
                 <i class="fa fa-github footer-i"></i>
             </a>
         </div>
@@ -478,7 +468,7 @@
 
         <hr / width="100%">
 
-        <p>Made with ❤️ by Prerna Sharma</p>
+        <p>Made with ❤️ by Prathima Kadari</p>
 
 
     </footer>
