Added blog page

--- a/assets/blog.html
+++ b/assets/blog.html
@@ -3,8 +3,71 @@
 <head>
     <title>IOT-Spot</title>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css"> -->
+ 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/blog.css">
 </head>
-<body style="background-color:rgb(212, 242, 245)">
-    <main><div class="Flex_Flex__1nwV2 Blog_Blog__1SZlo"><div class="Flex_Flex__1nwV2 Blog_BlogBox__1gKQ8"><div class="card-grid-space" style="margin: 50px 30px;"><a class="card" href="/Explore?blog=61ed5b4381b0c357271c505f" style="background-image: url(&quot;https://images.unsplash.com/photo-1504270856906-58da8a7e7102?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fG1hbiUyMGxhcHRvcHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60&quot;);"><div><h1>Tech Blog</h1><p>This is a tech blog</p><div class="date">Sun Jan 23 2022</div><div class="tags"><div class="tag" style="background-color: rgb(93, 178, 98);">blog</div><div class="tag" style="background-color: rgb(105, 129, 204);">tech</div></div></div></a></div><div class="card-grid-space" style="margin: 50px 30px;"><a class="card" href="/Explore?blog=61ed5b7681b0c357271c5074" style="background-image: url(&quot;https://agile-temple-65744.herokuapp.com/public/Images/jpeg/1642945396292tech2.jpeg&quot;);"><div><h1>Tech Blog 2</h1><p>This is a tech blog 2</p><div class="date">Sun Jan 23 2022</div><div class="tags"><div class="tag" style="background-color: rgb(181, 176, 66);">tech2</div><div class="tag" style="background-color: rgb(28, 92, 143);">blog2</div></div></div></a></div></div></div></main>
+<body>
+    <nav class="nav-bar" style="background-color: #ebd8d0;">
+
+        <header id="logo" onclick="window.location.href = '#';">
+            <h3>&lt;/<span>IOT-Spot</span>&gt;</h3>
+        </header>
+
+        <div class="nav-elements" >
+            <div id="nav-btn" target="_blank" type="button" rel="noopener" onclick="window.history.back()">
+                <p>Back to Home</p>
+            </div>
+        </div>
+    </nav>  
+    
+    <div class="blog-container">
+      <main class="grid">
+          <article>
+              <img src="./images/Card_img.jpg" alt="">
+              <div class="text">
+                  <h3 >Title 1</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                  <button>Read More</button>
+              </div>
+          </article>
+
+          <article>
+            <img src="./images/Card_img.jpg" alt="">
+            <div class="text">
+                <h3 >Title 2</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                <button>Read More</button>
+            </div>
+        </article>
+
+        <article>
+            <img src="./images/Card_img.jpg" alt="">
+            <div class="text">
+                <h3 >Title 3</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                <button>Read More</button>
+            </div>
+        </article>
+
+        <article>
+            <img src="./images/Card_img.jpg" alt="">
+            <div class="text">
+                <h3 >Title 4</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                <button>Read More</button>
+            </div>
+        </article>
+
+      </main>
+  </div>
+
 </body>
 </html>
