--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li class="nav-link"><a href="#">Home</a></li>
                 <li class="nav-link"><a href="#about">About</a></li>
                 <li class="nav-link"><a href="#portfolio">Projects</a></li>
-                <li class="nav-link"><a target="_blank" href="assets/blog.html">Blog</a></li>
+                <li class="nav-link"><a href="assets/blog.html">Blog</a></li>
             </ul>
             <div id="nav-btn" target="_blank" rel="noopener" onclick="window.open('mailto:kadariprathima4@gmail.com');">
                 <p>Let's Connect</p>
