Fixed some Spells and errors

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <nav class="nav-bar">
 
         <header id="logo" onclick="window.location.href = '#';">
-            <h3>&lt;/<span>IOT-Spot</span>&gt;</h3>
+            <h3>&lt;<span>IOT-Spot</span>&gt;</h3>
         </header>
 
         <div class="nav-elements">
@@ -177,7 +177,7 @@
         <div class="about-content">
             <div class="about-brief">
                 <h1>About</h1>
-                <p>The internet of things, or IoT, is a system of interrelated computing devices, mechanical and digital machines, objects, animals or people that are provided with unique identifiers (UIDs) and the ability to transfer data over a network without requiring human-to-human or human-to-computer interaction.
+                <p>The Internet of Things, or IoT, is a system of interrelated computing devices, mechanical and digital machines, objects, animals or people that are provided with unique identifiers (UIDs) and the ability to transfer data over a network without requiring human-to-human or human-to-computer interaction.
                      <br>
                     A thing in the internet of things can be a person with a heart monitor implant, a farm animal with a biochip transponder, an automobile that has built-in sensors to alert the driver when tire pressure is low or any other natural or man-made object that can be assigned an Internet Protocol (IP) address and is able to transfer data over a network.
                     .</p><br>
@@ -269,14 +269,14 @@
              <!--- <div class="col-lg-2 col-2 service-icons"><i class=" fas fa-phone"></div> -->
                 <div class="col-lg-10 col-10">
                   <h3 style="margin-left:10vw">Design & Features </h3>
-                  <p> We offers a good selection of professional website templates along with flexibility to add additional features like Google Analytics, CRM, third-party marketing tools, etc.</p>
+                  <p> We offer everyone a good selection of professional website templates along with flexibility to add additional features like Google Analytics, CRM, third-party marketing tools, etc.</p>
                 </div>
                 </div>
                 <div class="row">
                 <!--- <div class="col-lg-2 col-2 service-icons"><i class=" fas fa-phone"></div> -->
                     <div class="col-lg-10 col-10">
                       <h3 style="margin-left:10vw">Support 24/7</h3>
-                      <p>Here, You will get 24/7 customer support. Beacause we valued our each and every customer.</p>
+                      <p>Here, You will get 24/7 customer support. Because we value each and every customer.</p>
                     </div>
                     </div>
           </div>
@@ -300,7 +300,7 @@
                 <div class="extra-div col-lg-4 col-md-4 col-12">
                   <a href="#"><i class="fa-3x fas fa-trophy"></i></a>
                   <h3>AWESOME DESIGN</h3>
-                  <p> It has an Awesome Design focuses on collecting high quality resources and tools which can be used by UI/UX designers in daily work 
+                  <p> It has an Awesome Design focuses on collecting high quality resources and tools which can be used by UI/UX designers in daily work.
                   </p>
               </div>
                 <div class="extra-div col-lg-4 col-md-4 col-12">
