Added footer in blog page

--- a/assets/blog.html
+++ b/assets/blog.html
@@ -9,12 +9,24 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css"> -->
- 
+    <!-- ============= Linking Favicon ============== -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+
+    <!-- ========== Linking Favicon Ends =========== -->
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/blog.css">
+ 
+    <!-- linking icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
+
+    <!-- Navigation bar begins -->
     <nav class="nav-bar" style="background-color: #ebd8d0;">
 
         <header id="logo" onclick="window.location.href = '#';">
@@ -27,7 +39,9 @@
             </div>
         </div>
     </nav>  
+    <!-- navigation bar ends -->
     
+    <!-- blog page begins -->
     <div class="blog-container">
       <main class="grid">
           <article>
@@ -68,6 +82,33 @@
 
       </main>
   </div>
+  
+  <!-- blog page ends -->
 
+    <!-- =========== Footer Section Begins ============ -->
+    <footer class="footer">
+
+        <a href="#" class="up-btn-wrapper" alt="Go to top">
+            <i class="fa fa-angle-up up-btn"></i>
+        </a>
+
+        <div class="footer-icons">
+            <a href="https://twitter.com/prathimak88" target="_blank" rel="noopener" alt="twitter">
+                <i style="margin-top:6px;" class="fa fa-twitter  footer-i"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/prathima-kadari/" target="_blank" rel="noopener" alt="linkedin">
+                <i class="fa fa-linkedin footer-i"></i>
+            </a>
+            <a href="https://github.com/prathimacode-hub" target="_blank" rel="noopener" alt="github">
+                <i class="fa fa-github footer-i"></i>
+            </a>
+        </div>
+
+        <hr / width="100%">
+
+        <p>Made with ❤️ by Prathima Kadari</p>
+
+    </footer>
+    <!-- =========== Footer Section Ends ============== -->
 </body>
 </html>
