Improved woking of button in home page *Fixed 128

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
              <h1> <span>IOT-Spot</span></h1>
                 <h2 id="main-title"><span class="title">Awesome Design</span></h2>
                 <div class="btn-grp">
-                    <div class="btn primary" >
-                        <a  style="color:white; font-size:1.6rem; font-weight:700; text-decoration:none;"href="#about">About</a>
-                    </div>
-                    <div class=" btn secondary" href=".contact">
-                        <a style="color:white; font-size:1.6rem; font-weight:700; text-decoration:none;" href="#portfolio">Contact us</a>
-                    </div>
+                  <a href="#about" style="text-decoration:none;"><div class="btn primary"  style="color:white; font-size:1.6rem; font-weight:700; text-decoration:none;" >
+                    About
+                </div></a>
+                <a href="#portfolio" style="text-decoration: none;"><div class=" btn secondary"  style="color:white; font-size:1.6rem; font-weight:700; text-decoration:none;" >
+                  Contact us
+              </div></a>
                 </div>
 
             </div>
