overflow managed and cards section improved

--- a/index.html
+++ b/index.html
@@ -297,23 +297,30 @@
 
         <section class="header-extradiv" id="about">
             <div style="margin-top:80px;"class="container">
-              <div class="row">
-                <div class="extra-div col-lg-4 col-md-4 col-12">
+              <div class="container-extradiv row">
+                <div class="extra-div">
+                  <div class="extraDiv-icon">
                   <a href="#"><i class="fa-3x fas fa-desktop"></i></a>
                   <h3>EASY TO USE</h3>
-                  <p>It's really very easy to use . Any person with or without programming knowledge can use it. 
+                  </div>
+                  <p class="card-des">It's really very easy to use . Any person with or without programming knowledge can use it. 
                   </p>
               </div>
-                <div class="extra-div col-lg-4 col-md-4 col-12">
+              <!-- col-lg-4 col-md-4 col-12 -->
+                <div class="extra-div">
+                  <div class="extraDiv-icon">
                   <a href="#"><i class="fa-3x fas fa-trophy"></i></a>
                   <h3>AWESOME DESIGN</h3>
-                  <p> It has an Awesome Design focuses on collecting high quality resources and tools which can be used by UI/UX designers in daily work.
+                  </div>
+                  <p class="card-des"> It has an Awesome Design focuses on collecting high quality resources and tools which can be used by UI/UX designers in daily work.
                   </p>
               </div>
-                <div class="extra-div col-lg-4 col-md-4 col-12">
+                <div class="extra-div">
+                  <div class="extraDiv-icon">
                   <a href="#"><i class="fa-3x fas fa-magic"></i></a>
                   <h3>EASY TO CUSTOMIZE</h3>
-                  <p> It is easy to customize too .It also have a drag-and-drop builder, powerful editing tools, and customization options.
+                  </div>
+                  <p class="card-des"> It is easy to customize too .It also have a drag-and-drop builder, powerful editing tools, and customization options.
                   </p>
               </div>
               </div>
