Tilting effect activated

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div>
     <section class="section about" id="about">
 
-        <div class="about-img">
+        <div class="about-img" data-tilt data-tilt-glare data-tilt-max-glare="0.8" transform-style: preserve-3d>
             <img src="assets/images/hero.png" alt="Prathima-Kadari-">
         </div>
 
@@ -200,7 +200,7 @@
     <h2 style="text-align:center;">Inclusion</h2>
     <p style="text-align:center;">Here, are the scripts that are included in our project</p>
     <div class="row">
-      <div class="column">
+      <div class="column" data-tilt data-tilt-axis="x">
         <h3>8051</h3>
         <h3>ARM</h3>
         <h3>Adafruit</h3>
@@ -209,7 +209,7 @@
         <h3>Beagle</h3>
         
       </div>
-      <div class="column">
+      <div class="column" data-tilt data-tilt-axis="x">
         <h3>ESP32</h3>
         <h3>ESP8266</h3>
         <h3>Node MCU</h3>
@@ -298,24 +298,24 @@
         <section class="header-extradiv" id="about">
             <div style="margin-top:80px;"class="container">
               <div class="row">
-                <div class="extra-div col-lg-4 col-md-4 col-12">
+                <div class="extra-div col-lg-4 col-md-4 col-12" data-tilt data-tilt-scale="1.1">
                   <a href="#"><i class="fa-3x fas fa-desktop"></i></a>
                   <h3>EASY TO USE</h3>
                   <p>It's really very easy to use . Any person with or without programming knowledge can use it. 
                   </p>
-              </div>
-                <div class="extra-div col-lg-4 col-md-4 col-12">
+                </div>
+                <div class="extra-div col-lg-4 col-md-4 col-12" data-tilt data-tilt-scale="1.1">
                   <a href="#"><i class="fa-3x fas fa-trophy"></i></a>
                   <h3>AWESOME DESIGN</h3>
                   <p> It has an Awesome Design focuses on collecting high quality resources and tools which can be used by UI/UX designers in daily work.
                   </p>
-              </div>
-                <div class="extra-div col-lg-4 col-md-4 col-12">
+                </div>
+                <div class="extra-div col-lg-4 col-md-4 col-12" data-tilt data-tilt-scale="1.1">
                   <a href="#"><i class="fa-3x fas fa-magic"></i></a>
                   <h3>EASY TO CUSTOMIZE</h3>
                   <p> It is easy to customize too .It also have a drag-and-drop builder, powerful editing tools, and customization options.
                   </p>
-              </div>
+                </div>
               </div>
             </div>
           </section>
